@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-23T00:35:40Z",
-  "count_outdated" : 1194,
-  "uniques_outdated" : 723,
+  "timestamp" : "2025-01-26T00:36:53Z",
+  "count_outdated" : 1195,
+  "uniques_outdated" : 724,
   "count" : 1196,
   "uniques" : 725,
   "clones" : [
-    {
-      "timestamp": "2025-01-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-19T00:00:00Z",
       "count": 1,
