@@ -1,12 +1,7 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 1,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2025-01-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-01-19T00:00:00Z",
       "count": 1,
